feat: Criação da página de Cadastro de Ambiente

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -21,6 +21,7 @@
             <div class="navbar-nav">
                 <a class="nav-link" th:href="@{/dispositivo}">Seus Dispositivos</a>
                 <a class="nav-link" th:href="@{/dispositivo/cadastrar}">Cadastro de Dispositivos</a>
+                <a class="nav-link" th:href="@{/ambiente/cadastrar}">Cadastro de Ambiente</a>
             </div>
         </div>
         <ul class="navbar-nav">
