--- a/src/main/resources/templates/dispositivo/form-cadastrar.html
+++ b/src/main/resources/templates/dispositivo/form-cadastrar.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="form-group">
-            <label class="form-label" for="consumoMedio">Consumo Médio</label>
+            <label class="form-label" for="consumoMedio">Consumo Médio (em KWh)</label>
             <input type="text" class="form-control" id="consumoMedio" th:field="*{consumoMedio}" placeholder="Informe o consumo médio..."/>
             <p th:if="${#fields.hasErrors('consumoMedio')}" class="text text-danger" th:errors="*{consumoMedio}"></p>
         </div>
@@ -37,6 +37,8 @@
         </div>
 
         <button type="submit" class="btn btn-success mt-3">Cadastrar</button>
+
+        <div class="alert alert-success mt-3" th:if="!${#strings.isEmpty(mensagem)}" th:text="${mensagem}">
 
     </form>
 </div>
