feat: Criação da funcionalidade de deleção de Dispositivos

--- a/src/main/resources/templates/dispositivo/list-dispositivos.html
+++ b/src/main/resources/templates/dispositivo/list-dispositivos.html
@@ -21,15 +21,42 @@
             <th>Consumo Médio de Energia</th>
             <th>Ambiente</th>
             <th>Status</th>
+            <th></th>
         </tr>
         <tr th:each="disp:${dispositivos}">
             <td th:text="${disp.nome}"></td>
             <td th:text="${disp.consumoMedio}"></td>
             <td th:text="${disp.ambiente}"></td>
             <td th:text="${disp.status}"></td>
+            <th>
+                <button th:onclick="|dispositivoId.value = ${disp.id}|" type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">
+                    Deletar
+                </button>
+            </th>
         </tr>
 
     </table>
+
+    <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="deleteModalLabel">Atenção!!</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Tem certeza que deseja deletar esse dispositivo?
+                </div>
+                <div class="modal-footer">
+                    <form th:action="@{/dispositivo/deletar}" method="post">
+                        <input type="hidden" name="id" id="dispositivoId">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                        <button type="submit" class="btn btn-danger">Deletar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </div>
 
