--- a/src/main/resources/templates/ambiente/form-cadastrar.html
+++ b/src/main/resources/templates/ambiente/form-cadastrar.html
@@ -37,13 +37,40 @@
             <tr>
                 <th>Nome</th>
                 <th>Descrição</th>
+                <th></th>
             </tr>
             <tr th:each="amb:${ambientes}">
                 <td th:text="${amb.label}"></td>
                 <td th:text="${amb.descricao}"></td>
+                <th>
+                    <button th:onclick="|ambienteId.value = ${amb.id}|" type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#deleteModal">
+                        Deletar
+                    </button>
+                </th>
             </tr>
 
         </table>
+
+        <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="deleteModalLabel">Atenção!!</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        Tem certeza que deseja deletar esse dispositivo?
+                    </div>
+                    <div class="modal-footer">
+                        <form th:action="@{/ambiente/deletar}" method="post">
+                            <input type="hidden" name="id" id="ambienteId">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                            <button type="submit" class="btn btn-danger">Deletar</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
