fix: Corrigindo os alertas nas páginas

--- a/src/main/resources/templates/ambiente/form-cadastrar.html
+++ b/src/main/resources/templates/ambiente/form-cadastrar.html
@@ -32,6 +32,9 @@
 
         </form>
 
+        <div class="alert alert-warning mt-3" th:if="!${#strings.isEmpty(mensagem)}" th:text="${mensagem}">
+        </div>
+
         <table class="table mt-5">
 
             <tr>
