--- a/src/main/resources/templates/dispositivo/list-dispositivos.html
+++ b/src/main/resources/templates/dispositivo/list-dispositivos.html
@@ -14,6 +14,9 @@
 
     <h1 class="mt-3 mb-5">Seus Dispositivos</h1>
 
+    <div class="alert alert-warning mt-3" th:if="!${#strings.isEmpty(mensagem)}" th:text="${mensagem}">
+    </div>
+
     <table class="table">
 
         <tr>
