--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -22,6 +22,7 @@
                 <a class="nav-link" th:href="@{/dispositivo}">Seus Dispositivos</a>
                 <a class="nav-link" th:href="@{/dispositivo/cadastrar}">Cadastro de Dispositivos</a>
                 <a class="nav-link" th:href="@{/ambiente/cadastrar}">Cadastro de Ambiente</a>
+                <a class="nav-link" th:href="@{/consumo-energetico}">Seu Consumo</a>
             </div>
         </div>
         <ul class="navbar-nav">
