--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -20,8 +20,8 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-link" th:href="@{/dispositivo}">Seus Dispositivos</a>
-                <a class="nav-link" th:href="@{/dispositivo/cadastrar}">Cadastro de Dispositivos</a>
-                <a class="nav-link" th:href="@{/ambiente/cadastrar}">Cadastro de Ambiente</a>
+                <a class="nav-link" th:href="@{/dispositivo/cadastrar}" sec:authorize="hasRole('ROLE_ADMIN')">Cadastro de Dispositivos</a>
+                <a class="nav-link" th:href="@{/ambiente/cadastrar}" sec:authorize="hasRole('ROLE_ADMIN')">Cadastro de Ambiente</a>
                 <a class="nav-link" th:href="@{/consumo-energetico}">Seu Consumo</a>
             </div>
         </div>
